change bg music

--- a/index.html
+++ b/index.html
@@ -150,21 +150,21 @@
                             <li><a href="#people">伴娘&伴郎</a></li>
                             <li><a href="#gallery">相册</a></li>
                             <li><a href="#rsvp">报名</a></li>
-                            <li class="menu-item-has-children">
-                                <a href="javascript:void(0);">其他</a>
-                                <ul class="sub-menu">
-                                    <li><a href="blog.html">博客</a></li>
-                                    <li><a href="blog-details.html">留言</a></li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#Level3">Thidr level</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="#">Level3</a></li>
-                                            <li><a href="#">Level3</a></li>
-                                            <li><a href="#">Level3</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
+                            <!--<li class="menu-item-has-children">-->
+                                <!--<a href="javascript:void(0);">其他</a>-->
+                                <!--<ul class="sub-menu">-->
+                                    <!--<li><a href="blog.html">博客</a></li>-->
+                                    <!--<li><a href="blog-details.html">留言</a></li>-->
+                                    <!--<li class="menu-item-has-children">-->
+                                        <!--<a href="#Level3">Thidr level</a>-->
+                                        <!--<ul class="sub-menu">-->
+                                            <!--<li><a href="#">Level3</a></li>-->
+                                            <!--<li><a href="#">Level3</a></li>-->
+                                            <!--<li><a href="#">Level3</a></li>-->
+                                        <!--</ul>-->
+                                    <!--</li>-->
+                                <!--</ul>-->
+                            <!--</li>-->
                         </ul>
                     </div><!-- end of nav-collapse -->
                 </div><!-- end of container -->
@@ -223,11 +223,11 @@
 
 
         <!-- start count-down-section -->
-        <section class="count-down-section section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/bg/love%20adventure.jpg" data-speed="7">
+        <section class="count-down-section section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/bg/adventure.jpg" data-speed="7">
             <div class="container">
                 <div class="row">
                     <div class="col col-md-4">
-                        <h2><span>婚礼倒计时.....</span> The adventure</h2>
+                        <h2><span>We are waiting for.....</span> The adventure</h2>
                     </div>
                     <div class="col col-md-7 col-md-offset-1">
                         <div class="count-down-clock">
@@ -249,7 +249,7 @@
                     <div class="col col-xs-12">
                         <div class="section-title">
                             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-                            <h2>我们爱的故事</h2>
+                            <h2>Our Love Story</h2>
                         </div>
                     </div>
                 </div> <!-- end section-title -->
@@ -268,7 +268,7 @@
                                 </div>
                                 <div class="col col-md-6">
                                     <div class="img-holder">
-                                        <img src="images/story/img-1.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/junior/%E5%86%9B%E8%AE%AD.jpg" alt class="img img-responsive">
                                     </div>
                                 </div>
                             </div>
@@ -337,11 +337,11 @@
 
 
         <!-- start cta -->
-        <section class="cta section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/fireworks.jpg" data-speed="7">
+        <section class="cta section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/bg/celebrate/celebrate.jpg" data-speed="7">
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12">
-                        <h2><span>我们即将...</span>走入婚姻殿堂</h2>
+                        <h2><span>We are going to...</span>Celebrate Our Love</h2>
                     </div>
                 </div> <!-- end row -->
             </div> <!-- end container -->
@@ -365,7 +365,7 @@
                     <div class="col col-lg-10 col-lg-offset-1">
                         <div class="event">
                             <div class="img-holder">
-                                <img src="images/events/img-1.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin/jieqin.jpg" alt class="img img-responsive">
                             </div>
                             <div class="details">
                                 <h3>接亲</h3>
@@ -381,10 +381,10 @@
                         </div>
                         <div class="event">
                             <div class="img-holder">
-                                <img src="images/events/img-2.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/yishi.jpg" alt class="img img-responsive">
                             </div>
                             <div class="details">
-                                <h3>结婚礼堂</h3>
+                                <h3>结婚仪式</h3>
                                 <ul>
                                     <li><i class="fa fa-map-marker"></i>福建省福清市创元千禧酒店紫荆厅</li>
                                     <li><i class="fa fa-clock-o"></i>2018年02月13号 下午5点</li>
@@ -409,7 +409,7 @@
                     <div class="col col-xs-12">
                         <div class="section-title">
                             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-                            <h2>伴娘 &amp; 伴郎</h2>
+                            <h2>Groomsmen & Bridesmaid</h2>
                         </div>
                     </div>
                 </div> <!-- end section-title -->
@@ -449,8 +449,8 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/groomsmen/img-2.jpg" class="popup-image">
-                                                <img src="images/groomsmen/img-2.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E5%A7%9A%E4%BD%B3%E4%B8%BD.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E5%A7%9A%E4%BD%B3%E4%B8%BD.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -466,8 +466,8 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/groomsmen/img-3.jpg" class="popup-image">
-                                                <img src="images/groomsmen/img-3.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -483,8 +483,8 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/groomsmen/img-4.jpg" class="popup-image">
-                                                <img src="images/groomsmen/img-4.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E9%99%88%E6%96%87%E6%80%A1.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E9%99%88%E6%96%87%E6%80%A1.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -500,8 +500,8 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/groomsmen/img-5.jpg" class="popup-image">
-                                                <img src="images/groomsmen/img-5.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E7%A7%A6%E8%90%8D.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E7%A7%A6%E8%90%8D.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -537,8 +537,8 @@
                                 <div class="tab-pane fade grid-wrapper" id="bridesmaid">
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/bridesmaid/img-1.jpg" class="popup-image">
-                                                <img src="images/bridesmaid/img-1.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banlang/%E7%BD%97%E5%B0%91%E7%BD%95.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banlang/%E7%BD%97%E5%B0%91%E7%BD%95.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -554,8 +554,8 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/bridesmaid/img-2.jpg" class="popup-image">
-                                                <img src="images/bridesmaid/img-2.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banlang/%E9%99%88%E6%8C%AF%E6%B6%9B.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banlang/%E9%99%88%E6%8C%AF%E6%B6%9B.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -571,8 +571,8 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/bridesmaid/img-3.jpg" class="popup-image">
-                                                <img src="images/bridesmaid/img-3.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banlang/%E5%90%B4%E9%B9%8F%E7%A8%8B.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banlang/%E5%90%B4%E9%B9%8F%E7%A8%8B.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -588,8 +588,8 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/bridesmaid/img-4.jpg" class="popup-image">
-                                                <img src="images/bridesmaid/img-4.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banlang/%E6%9D%8E%E4%BA%9A%E5%AD%A6.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banlang/%E6%9D%8E%E4%BA%9A%E5%AD%A6.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -622,8 +622,8 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/bridesmaid/img-6.jpg" class="popup-image">
-                                                <img src="images/bridesmaid/img-6.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banlang/%E5%BC%A0%E6%96%87%E6%9D%B0.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banlang/%E5%BC%A0%E6%96%87%E6%9D%B0.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -664,9 +664,9 @@
                         <div class="gallery-filters">
                             <ul>
                                 <li><a data-filter="*" href="#" class="current">所有</a></li>
-                                <li><a data-filter=".wedding" href="#">高中</a></li>
+                                <li><a data-filter=".wedding" href="#">硕士</a></li>
                                 <li><a data-filter=".ceremony" href="#">大学</a></li>
-                                <li><a data-filter=".party" href="#">硕士</a></li>
+                                <li><a data-filter=".party" href="#">高中</a></li>
                             </ul>
                         </div>
 
@@ -687,8 +687,8 @@
                                 </a>
                             </div>
                             <div class="grid wedding party">
-                                <a href="images/gallery/img-4.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="images/gallery/img-4.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/%E9%AB%98%E4%B8%80%E7%8F%AD%E7%BA%A7.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/%E9%AB%98%E4%B8%80%E7%8F%AD%E7%BA%A7.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid ceremony">
@@ -697,8 +697,8 @@
                                 </a>
                             </div>
                             <div class="grid party">
-                                <a href="images/gallery/img-6.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="images/gallery/img-6.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/%E9%AB%98%E4%B8%80%E7%9A%84%E5%BE%90%E6%A2%A6%E9%9B%AA.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/%E9%AB%98%E4%B8%80%E7%9A%84%E5%BE%90%E6%A2%A6%E9%9B%AA.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid wedding">
@@ -730,7 +730,7 @@
 
 
         <!-- start rsvp-section -->
-        <section class="rsvp-section section-padding parallax" data-bg-image="images/rsvp-bg.jpg" data-speed="7" id="rsvp">
+        <section class="rsvp-section section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/bg/%E9%A2%84%E5%AE%9A%E8%83%8C%E6%99%AF.jpg" data-speed="7" id="rsvp">
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12">
