--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <div class="col col-xs-12">
                         <div class="gb groom">
                             <div class="img-holder wow fadeInLeftSlow">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/a%20%2847%29_1_%E5%89%AF%E6%9C%AC.jpg" alt>
+                                <img src="http://p0myo90fu.bkt.clouddn.com/xinlang/a%20%2847%29_1_%E5%89%AF%E6%9C%AC.jpg" alt>
                             </div>
                             <div class="details">
                                 <div class="details-inner">
@@ -268,15 +268,16 @@
                                 </div>
                                 <div class="col col-md-6">
                                     <div class="img-holder">
-                                        <img src="http://p0myo90fu.bkt.clouddn.com/junior/%E5%86%9B%E8%AE%AD.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/junxun/%E5%86%9B%E8%AE%AD.jpg" alt class="img img-responsive">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col col-md-6">
                                     <div class="img-holder right-align-text story-slider">
-                                        <img src="images/story/img-2.jpg" alt class="img img-responsive">
-                                        <img src="images/story/img-3.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/yuehui/%E7%BA%A6%E4%BC%9A2.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/yuehui/%E7%BA%A6%E4%BC%9A1.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/yuehui/%E7%BA%A6%E4%BC%9A3.jpg" alt class="img img-responsive">
                                     </div>
                                 </div>
                                 <div class="col col-md-6 text-holder">
@@ -303,18 +304,25 @@
                                 </div>
                                 <div class="col col-md-6">
                                     <div class="img-holder right-align-text story-slider">
-                                        <img src="images/story/img-7.jpg" alt class="img img-responsive">
-                                        <img src="images/story/img-5.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/qiuhun/%E6%B1%82%E5%A9%9A1.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/qiuhun/%E6%B1%82%E5%A9%9A2.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/qiuhun/%E6%B1%82%E5%A9%9A3.jpg" alt class="img img-responsive">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col col-md-6">
-                                    <div class="img-holder video-holder">
-                                        <img src="images/story/img-8.jpg" alt class="img img-responsive">
-                                        <a href="https://www.youtube.com/embed/XSGBVzeBUbk?autoplay=1" data-type="iframe" class="video-play-btn">
-                                            <i class="fa fa-play"></i>
-                                        </a>
+                                    <div class="img-holder right-align-text story-slider">
+                                    <!--<div class="img-holder video-holder">-->
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/dinghun/%E8%AE%A2%E5%A9%9A1.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/dinghun/%E8%AE%A2%E5%A9%9A2.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/dinghun/%E8%AE%A2%E5%A9%9A4.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/dinghun/%E8%AE%A2%E5%A9%9A5.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/dinghun/%E8%AE%A2%E5%A9%9A3.jpg" alt class="img img-responsive">
+                                        <img src="http://p0myo90fu.bkt.clouddn.com/dinghun/%E8%AE%A2%E5%A9%9A7.jpg" alt class="img img-responsive">
+                                        <!--<a href="https://www.youtube.com/embed/XSGBVzeBUbk?autoplay=1" data-type="iframe" class="video-play-btn">-->
+                                            <!--<i class="fa fa-play"></i>-->
+                                        <!--</a>-->
                                     </div>
                                 </div>
                                 <div class="col col-md-6 text-holder">
@@ -432,8 +440,8 @@
                                 <div class="tab-pane fade in active grid-wrapper" id="groomsmen">
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/groomsmen/img-1.jpg" class="popup-image">
-                                                <img src="images/groomsmen/img-1.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E5%88%98%E7%90%B3_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E5%88%98%E7%90%B3_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -605,8 +613,8 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="images/bridesmaid/img-5.jpg" class="popup-image">
-                                                <img src="images/bridesmaid/img-5.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banlang/%E9%BB%84%E5%87%AF%E6%97%8B.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banlang/%E9%BB%84%E5%87%AF%E6%97%8B.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
@@ -672,18 +680,18 @@
 
                         <div class="gallery-container gallery-fancybox masonry-gallery">
                             <div class="grid wedding">
-                                <a href="images/gallery/img-1.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="images/gallery/img-1.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB1.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB1.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid wedding ceremony">
-                                <a href="images/gallery/img-2.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="images/gallery/img-2.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB2.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB2.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid ceremony eudcation">
-                                <a href="images/gallery/img-3.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="images/gallery/img-3.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A61.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A61.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid wedding party">
@@ -692,8 +700,8 @@
                                 </a>
                             </div>
                             <div class="grid ceremony">
-                                <a href="images/gallery/img-5.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="images/gallery/img-5.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A62.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A62.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid party">
@@ -702,23 +710,24 @@
                                 </a>
                             </div>
                             <div class="grid wedding">
-                                <a href="images/gallery/img-7.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="images/gallery/img-7.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB3.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/shuoshi/%E7%A1%95%E5%A3%AB3.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                             <div class="grid ceremony">
                                <!--  <a href="images/gallery/img-8.jpg" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="images/gallery/img-8.jpg" alt class="img img-responsive">
                                 </a> -->
-                                <a href="https://www.youtube.com/embed/XSGBVzeBUbk?autoplay=1" data-type="iframe" class="video-play-btn">
-                                    <img src="images/gallery/img-8.jpg" alt class="img img-responsive">
+                                <!--<a href="https://www.youtube.com/embed/XSGBVzeBUbk?autoplay=1" data-type="iframe" class="video-play-btn">-->
+                                <a href="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A64.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A64.jpg" alt class="img img-responsive">
                                     <i class="fa fa-play"></i>
                                 </a>
 
                             </div>
                             <div class="grid ceremony">
-                                <a href="images/gallery/img-9.jpg" class="fancybox" data-fancybox-group="gall-1">
-                                    <img src="images/gallery/img-9.jpg" alt class="img img-responsive">
+                                <a href="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A63.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="http://p0myo90fu.bkt.clouddn.com/daxue/%E5%A4%A7%E5%AD%A63.jpg" alt class="img img-responsive">
                                 </a>
                             </div>
                         </div>
