--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
         </div>
         <!-- end music box -->
 
-
         <!-- start of hero -->
         <section class="hero">
             <div class="static-hero"></div>
@@ -392,7 +391,7 @@
                                 <img src="http://p0myo90fu.bkt.clouddn.com/yishi.jpg" alt class="img img-responsive">
                             </div>
                             <div class="details">
-                                <h3>结婚仪式</h3>
+                                <h3>婚礼仪式</h3>
                                 <ul>
                                     <li><i class="fa fa-map-marker"></i>福建省福清市创元千禧酒店紫荆厅</li>
                                     <li><i class="fa fa-clock-o"></i>2018年02月13号 下午5点</li>
@@ -474,8 +473,8 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9.jpg" class="popup-image">
-                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
