change bg music

--- a/index.html
+++ b/index.html
@@ -508,12 +508,12 @@
                                 <div class="tab-pane fade in active grid-wrapper" id="groomsmen">
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E5%88%98%E7%90%B3_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
-                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E5%88%98%E7%90%B3_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E9%99%88%E6%96%87%E6%80%A1.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E9%99%88%E6%96%87%E6%80%A1.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
-                                            <h3>刘琳</h3>
+                                            <h3>陈文怡</h3>
                                             <span></span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
@@ -542,46 +542,63 @@
                                     </div>
                                     <div class="grid">
                                         <div class="img-holder">
-                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
-                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                            </a>
-                                        </div>
-                                        <div class="details">
-                                            <h3>朱丽岩</h3>
-                                            <span></span>
-                                            <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="grid">
-                                        <div class="img-holder">
-                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E9%99%88%E6%96%87%E6%80%A1.jpg" class="popup-image">
-                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E9%99%88%E6%96%87%E6%80%A1.jpg" alt class="img img-responsive">
-                                            </a>
-                                        </div>
-                                        <div class="details">
-                                            <h3>陈文怡</h3>
-                                            <span></span>
-                                            <ul class="social-links">
-                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="grid">
-                                        <div class="img-holder">
                                             <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E7%A7%A6%E8%90%8D.jpg" class="popup-image">
                                                 <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E7%A7%A6%E8%90%8D.jpg" alt class="img img-responsive">
                                             </a>
                                         </div>
                                         <div class="details">
                                             <h3>秦萍</h3>
+                                            <span></span>
+                                            <ul class="social-links">
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="grid">
+                                        <div class="img-holder">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/%E5%88%98%E7%90%B3_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/%E5%88%98%E7%90%B3_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                            </a>
+                                        </div>
+                                        <div class="details">
+                                            <h3>刘琳</h3>
+                                            <span></span>
+                                            <ul class="social-links">
+                                                <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                                <li><a href="#"><i class="fa fa-qq"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="grid">
+                                        <div class="img-holder">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9D%AF%E5%AD%90_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9D%AF%E5%AD%90_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                            </a>
+                                        </div>
+                                        <!--<div class="details">-->
+                                            <!--<h3></h3>-->
+                                            <!--<span></span>-->
+                                            <!--<ul class="social-links">-->
+                                                <!--<li><a href="#"><i class="fa fa-weixin"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-weibo"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
+                                                <!--<li><a href="#"><i class="fa fa-qq"></i></a></li>-->
+                                            <!--</ul>-->
+                                        <!--</div>-->
+                                    </div>
+                                    <div class="grid">
+                                        <div class="img-holder">
+                                            <a href="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9_%E5%89%AF%E6%9C%AC.jpg" class="popup-image">
+                                                <img src="http://p0myo90fu.bkt.clouddn.com/banniang/%E6%9C%B1%E4%B8%BD%E5%B2%A9_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                            </a>
+                                        </div>
+                                        <div class="details">
+                                            <h3>朱丽岩</h3>
                                             <span></span>
                                             <ul class="social-links">
                                                 <li><a href="#"><i class="fa fa-weixin"></i></a></li>
@@ -737,14 +754,14 @@
 
                 <div class="row">
                     <div class="col col-xs-12 sortable-gallery">
-                        <div class="gallery-filters">
-                            <ul>
-                                <li><a data-filter="*" href="#" class="current">所有</a></li>
-                                <li><a data-filter=".wedding" href="#">硕士</a></li>
-                                <li><a data-filter=".ceremony" href="#">大学</a></li>
-                                <li><a data-filter=".party" href="#">高中</a></li>
-                            </ul>
-                        </div>
+                        <!--<div class="gallery-filters">-->
+                            <!--<ul>-->
+                                <!--<li><a data-filter="*" href="#" class="current">所有</a></li>-->
+                                <!--<li><a data-filter=".wedding" href="#">硕士</a></li>-->
+                                <!--<li><a data-filter=".ceremony" href="#">大学</a></li>-->
+                                <!--<li><a data-filter=".party" href="#">高中</a></li>-->
+                            <!--</ul>-->
+                        <!--</div>-->
 
                         <div class="gallery-container gallery-fancybox masonry-gallery">
                             <div class="grid wedding">
@@ -807,7 +824,7 @@
 
 
         <!-- start rsvp-section -->
-        <section class="rsvp-section section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/bg/%E9%A2%84%E5%AE%9A%E8%83%8C%E6%99%AF.jpg" data-speed="7" id="rsvp">
+        <section class="rsvp-section section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/%E9%A2%84%E5%AE%9A%E8%83%8C%E6%99%AF_%E5%89%AF%E6%9C%AC.jpg" data-speed="7" id="rsvp">
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12">
