--- a/index.html
+++ b/index.html
@@ -427,11 +427,11 @@
                     <div class="col col-lg-10 col-lg-offset-1">
                         <div class="event">
                             <div class="img-holder story-slider">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin/jieqin.jpg" alt class="img img-responsive">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin/c%20%284%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin/c%20%2810%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin/c%20%2834%29_1_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin/c%20%2819%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin_720_490/c%20%2810%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin_720_490/c%20%284%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin_720_490/c%20%2819%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin_720_490/c%20%2815%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/jieqin_720_490/c%20%2834%29_1_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
                             </div>
                             <div class="details">
                                 <h3>接亲</h3>
@@ -449,12 +449,12 @@
                         </div>
                         <div class="event">
                             <div class="img-holder story-slider">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi/a%20%2866%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi/a%20%282%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi/a%20%2858%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi/a%20%2837%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi/a%20%2854%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
-                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi/a%20%281%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%2858%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%282%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%2837%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%281%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%2866%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
+                                <img src="http://p0myo90fu.bkt.clouddn.com/hunliyishi_720_490/a%20%2854%29_1_%E5%89%AF%E6%9C%AC.jpg" alt class="img img-responsive">
                             </div>
                             <div class="details">
                                 <h3>婚礼仪式</h3>
@@ -485,7 +485,7 @@
                     <div class="col col-xs-12">
                         <div class="section-title">
                             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-                            <h2>Groomsmen & Bridesmaid</h2>
+                            <h2  style="font-family: SimHei;">伴娘 & 伴郎</h2>
                         </div>
                     </div>
                 </div> <!-- end section-title -->
@@ -493,16 +493,16 @@
                 <div class="row">
                     <div class="col col-xs-12">
                         <div class="inportant-people-content">
-                            <div class="tablist">
-                                <ul class="nav">
-                                    <li class="active">
-                                        <a href="#groomsmen" data-toggle="tab">伴娘团</a>
-                                    </li>
-                                    <li>
-                                        <a href="#bridesmaid" data-toggle="tab">伴郎团</a>
-                                    </li>
-                                </ul>
-                            </div>
+                            <!--<div class="tablist">-->
+                                <!--<ul class="nav">-->
+                                    <!--<li class="active">-->
+                                        <!--<a href="#groomsmen" data-toggle="tab">伴娘团</a>-->
+                                    <!--</li>-->
+                                    <!--<li>-->
+                                        <!--<a href="#bridesmaid" data-toggle="tab">伴郎团</a>-->
+                                    <!--</li>-->
+                                <!--</ul>-->
+                            <!--</div>-->
 
                             <div class="tab-content">
                                 <div class="tab-pane fade in active grid-wrapper" id="groomsmen">
